<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/head_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/find_track_and_eat_healthy_food"
        android:textSize="14sp"
        android:textColor="#627B66"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/main_card"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="#F5F5F5"
        app:layout_constraintTop_toBottomOf="@id/head_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/collections_for_you"/>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/orange_circle"
        app:layout_constraintEnd_toEndOf="@id/main_card"
        app:layout_constraintStart_toStartOf="@id/main_card"
        app:layout_constraintTop_toTopOf="@id/main_card" />

    <TextView
        android:id="@+id/collections_for_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/main_card"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/collections_for_you"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/protein_meal_card"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toStartOf="@+id/vitamin_d3_meal_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collections_for_you" />

    <androidx.cardview.widget.CardView
        android:id="@+id/vitamin_d3_meal_card"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@id/collections_for_you"
        app:layout_constraintStart_toEndOf="@+id/protein_meal_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="#F5F5F5"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/fiber_meal_card"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginVertical="16dp"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toStartOf="@+id/high_carb_meal_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/protein_meal_card"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/high_carb_meal_card"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginVertical="16dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@id/protein_meal_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fiber_meal_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="#F5F5F5"/>

    <ImageView
        android:id="@+id/high_protein_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:elevation="2dp"
        android:src="@drawable/ic_high_protein"
        app:layout_constraintStart_toStartOf="@id/protein_meal_card"
        app:layout_constraintEnd_toEndOf="@id/protein_meal_card"
        app:layout_constraintTop_toTopOf="@id/protein_meal_card"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/high_protein_meals"
        android:elevation="2dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#627B66"
        app:layout_constraintStart_toStartOf="@id/high_protein_image"
        app:layout_constraintEnd_toEndOf="@id/high_protein_image"
        app:layout_constraintTop_toBottomOf="@id/high_protein_image"/>

    <ImageView
        android:id="@+id/vitamin_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/vitamin_image"
        app:layout_constraintStart_toStartOf="@id/vitamin_d3_meal_card"
        app:layout_constraintEnd_toEndOf="@id/vitamin_d3_meal_card"
        app:layout_constraintTop_toTopOf="@id/vitamin_d3_meal_card"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:textStyle="bold"
        android:text="@string/top_10_recipes_n_contains_vitamin_d3"
        android:textAlignment="center"
        android:elevation="2dp"
        android:textSize="14sp"
        android:textColor="#627B66"
        app:layout_constraintStart_toStartOf="@id/vitamin_image"
        app:layout_constraintEnd_toEndOf="@id/vitamin_image"
        app:layout_constraintTop_toBottomOf="@id/vitamin_image"/>

    <ImageView
        android:id="@+id/fiber_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_fiber_image"
        app:layout_constraintStart_toStartOf="@id/fiber_meal_card"
        app:layout_constraintEnd_toEndOf="@id/fiber_meal_card"
        app:layout_constraintTop_toTopOf="@id/fiber_meal_card"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:textStyle="bold"
        android:text="@string/fibers"
        android:textAlignment="center"
        android:elevation="2dp"
        android:textSize="14sp"
        android:textColor="#627B66"
        app:layout_constraintStart_toStartOf="@id/fiber_image"
        app:layout_constraintEnd_toEndOf="@id/fiber_image"
        app:layout_constraintTop_toBottomOf="@id/fiber_image"/>

    <ImageView
        android:id="@+id/high_carb_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_high_carb_image"
        app:layout_constraintStart_toStartOf="@id/high_carb_meal_card"
        app:layout_constraintEnd_toEndOf="@id/high_carb_meal_card"
        app:layout_constraintTop_toTopOf="@id/high_carb_meal_card"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/high_carb_meals"
        android:textAlignment="center"
        android:elevation="2dp"
        android:textSize="14sp"
        android:textColor="#627B66"
        app:layout_constraintStart_toStartOf="@id/high_carb_image"
        app:layout_constraintEnd_toEndOf="@id/high_carb_image"
        app:layout_constraintTop_toBottomOf="@id/high_carb_image"/>

    <View
        android:id="@+id/blue_circle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="32dp"
        android:elevation="2dp"
        android:background="@drawable/circle_shape"
        android:backgroundTint="#0064E5"
        app:layout_constraintStart_toStartOf="@id/main_card"
        app:layout_constraintBottom_toBottomOf="@id/main_card"/>

    <TextView
        android:id="@+id/protein_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:textSize="8sp"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/blue_circle"
        app:layout_constraintStart_toEndOf="@id/blue_circle"
        android:text="216 g"/>

    <TextView
        android:id="@+id/protein_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/protein"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/protein_number"
        app:layout_constraintTop_toBottomOf="@id/protein_number"
        />

    <View
        android:id="@+id/orange_circle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginBottom="32dp"
        android:elevation="2dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintStart_toEndOf="@id/blue_circle"
        app:layout_constraintEnd_toStartOf="@id/yellow_circle"
        android:backgroundTint="#FF6752"
        app:layout_constraintBottom_toBottomOf="@id/main_card"/>

    <TextView
        android:id="@+id/carb_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:textSize="8sp"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/orange_circle"
        app:layout_constraintStart_toEndOf="@id/orange_circle"
        android:text="216 g"/>

    <TextView
        android:id="@+id/carb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/carb"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/carb_number"
        app:layout_constraintTop_toBottomOf="@id/carb_number"
        />

    <View
        android:id="@+id/yellow_circle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:elevation="2dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintEnd_toEndOf="@id/main_card"
        app:layout_constraintBottom_toBottomOf="@id/main_card"
        android:backgroundTint="#FAB131"/>

    <TextView
        android:id="@+id/fat_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:textSize="8sp"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/yellow_circle"
        app:layout_constraintStart_toEndOf="@id/yellow_circle"
        android:text="216 g"/>

    <TextView
        android:id="@+id/fat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/fat"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/fat_number"
        app:layout_constraintTop_toBottomOf="@id/fat_number"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>